[refactor] 다면 평가 로그 추가